[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weibo-api-sdk"
version = "0.1.1"
description = "一个免登陆获取新浪微博数据的Python库，简单易用"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["weibo", "api", "scraper", "social-media", "微博"]
authors = [
    {name = "xuming", email = "xuming624@qq.com"}
]
maintainers = [
    {name = "xuming", email = "xuming624@qq.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "requests>=2.10.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/shibing624/weibo-api-sdk"
Documentation = "https://github.com/shibing624/weibo-api-sdk#readme"
Repository = "https://github.com/shibing624/weibo-api-sdk"
Issues = "https://github.com/shibing624/weibo-api-sdk/issues"
Changelog = "https://github.com/shibing624/weibo-api-sdk/blob/master/changelog.md"

[tool.setuptools]
packages = ["weibo_api_sdk", "weibo_api_sdk.config", "weibo_api_sdk.utils", "weibo_api_sdk.weibo"]

[tool.setuptools.package-data]
weibo_api_sdk = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=weibo_api_sdk --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

